Change the logic of opening google play store...

--- a/bidunyaFirsat.html
+++ b/bidunyaFirsat.html
@@ -21,7 +21,8 @@
 
             var userAgent = navigator.appVersion;
             if (userAgent.toLowerCase().includes("android")) {
-            	window.location = "http://market.android.com/details?id=com.avea.firsat";
+            	<!--window.location = "http://market.android.com/details?id=com.avea.firsat";-->
+            	window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=C33E8A8B-36A9-4BD5-A90B-42E568AE1653";
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
                 ios(contentId);
