Change the logic of opening google play store...

--- a/bidunyaFirsat.html
+++ b/bidunyaFirsat.html
@@ -21,14 +21,25 @@
 
             var userAgent = navigator.appVersion;
             if (userAgent.toLowerCase().includes("android")) {
-            	<!--window.location = "http://market.android.com/details?id=com.avea.firsat";-->
-            	window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=C33E8A8B-36A9-4BD5-A90B-42E568AE1653";
+            	android(contentId);
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
                 ios(contentId);
             }
             else {
                 window.location.assign("https://bireysel.turktelekom.com.tr/ozel-avantajlar/sayfalar/ana-sayfa.aspx");
+            }
+        }
+
+        function android(contentId) {
+            if (contentId != "") {
+                window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
+            }
+            else if(cmd != "" && cmd.includes("bidunya_deep_link")) {
+                	window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link";
+            }
+            else {
+            	window.location = "http://market.android.com/details?id=com.avea.firsat";
             }
         }
 
