--- a/bidunyaFirsat.html
+++ b/bidunyaFirsat.html
@@ -33,6 +33,11 @@
         }
 
         function android(contentId) {
+        setTimeout(function () {
+             window.location = "http://market.android.com/details?id=com.avea.firsat";
+
+            }, 25);
+
             if (contentId != "") {
                 window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
