--- a/deepLink/bidunyaFirsat.html
+++ b/deepLink/bidunyaFirsat.html
@@ -21,8 +21,9 @@
 
             var userAgent = navigator.appVersion;
             if (userAgent.toLowerCase().includes("android")) {
-            	android(contentId);
-            	<!--window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;-->
+            	<!--android(contentId);-->
+            	<!--window.location = "https://bordobereli.github.io/deepLink/cmd=bidunya_deep_link&campaign_id=" + contentId;-->
+            	window.location = "http://market.android.com/details?id=com.avea.firsat";
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
                 ios(contentId);
@@ -35,7 +36,7 @@
         function android(contentId) {
 
             if (contentId != "") {
-                window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
+                window.location = "https://bordobereli.github.io/deepLink/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else {
                 setTimeout(function () {
