Revert to back...

--- a/bidunyaFirsat.html
+++ b/bidunyaFirsat.html
@@ -21,7 +21,7 @@
 
             var userAgent = navigator.appVersion;
             if (userAgent.toLowerCase().includes("android")) {
-            	window.location = "http://market.android.com/details?id=com.avea.firsat";
+            	window.location = "http://market.android.com/details?id==com.avea.firsat";
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
                 ios(contentId);
@@ -29,25 +29,6 @@
             else {
                 window.location.assign("https://bireysel.turktelekom.com.tr/ozel-avantajlar/sayfalar/ana-sayfa.aspx");
             }
-        }
-
-        function android(contentId) {
-
-            if (contentId != "") {
-                window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
-            }
-            else {
-                setTimeout(function () {
-                    window.location = "http://market.android.com/details?id=com.avea.firsat";
-
-                }, 25);
-            }
-            <!--else if(cmd != "" && cmd.includes("bidunya_deep_link")) {
-                window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link";
-            }
-            else {
-            	window.location = "http://market.android.com/details?id=com.avea.firsat";
-            }-->
         }
 
         function ios(contentId) {
