--- a/bidunyaFirsat.html
+++ b/bidunyaFirsat.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>It works!</h1><
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script>
         window.onload = function () {
@@ -46,5 +45,8 @@
             }
         }
     </script>
+
+<h1>It works!</h1>
+
 </body>
 </html>
