bidunyafirsat:// scheme added...

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
         function android(contentId) {
             if (contentId != null) {
+                window.location = "bidunyafirsat://cmd=bidunya_deep_link&campaign_id=" + contentId;
+            }
+            else {
+                window.location = "http://market.android.com/details?id=com.avea.firsat";
+
+            }
+        }
+
+        function androidOld(contentId) {
+            if (contentId != null) {
                 window.location = "https://bordobereli.github.io/.well-known/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else {
