index.html convert back to bidunyafirsat.html...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -21,7 +21,7 @@
 
             var userAgent = navigator.appVersion;
             if (userAgent.toLowerCase().includes("android")) {
-                android(contentId);
+                androidOld(contentId);
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
                 ios(contentId);
