null is changed to ""...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -32,7 +32,7 @@
         }
 
         function android(contentId) {
-            if (contentId != null) {
+            if (contentId != "") {
                 window.location = "bidunyafirsat://cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else {
