null is changed to ""...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -42,7 +42,7 @@
         }
 
         function androidOld(contentId) {
-            if (contentId != null) {
+            if (contentId != "") {
                 window.location = "https://bordobereli.github.io/.well-known/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else {
