.well-known folder is removed from the link...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -43,7 +43,7 @@
 
         function androidOld(contentId) {
             if (contentId != "") {
-                window.location = "https://bordobereli.github.io/.well-known/cmd=bidunya_deep_link&campaign_id=" + contentId;
+                window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else {
                 window.location = "http://market.android.com/details?id=com.avea.firsat";
