.well-known folder is removed from the link...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -43,6 +43,9 @@
 
         function androidOld(contentId) {
             if (contentId != "") {
+                setTimeout(function () {
+                    window.location = "http://market.android.com/details?id=com.avea.firsat";
+            }, 25);
                 window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else {
