IOS function is refactored for better navigation...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -54,9 +54,10 @@
             else if(cmd.toLowerCase().includes("bidunya_deep_link")) {
                 window.location = "bidunyafirsat://cmd=bidunya_deep_link";
             } else {
-                setTimeout(function () {
+                window.location = "https://apps.apple.com/tr/app/bi-d%C3%BCnya-f%C4%B1rsat/id739894888?l=tr";
+                <!--setTimeout(function () {
                     window.location = "https://apps.apple.com/tr/app/bi-d%C3%BCnya-f%C4%B1rsat/id739894888?l=tr";
-                }, 25);
+                }, 25);-->
             }
         }
     </script>
