IOS function is refactored for better navigation...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -24,7 +24,7 @@
                 android(contentId, cmd);
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
-                ios(contentId);
+                ios(contentId, cmd);
             }
             else {
                 window.location.assign("https://bireysel.turktelekom.com.tr/ozel-avantajlar/sayfalar/ana-sayfa.aspx");
