bidunyafirsat.html is now working properly...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -33,6 +33,9 @@
 
         function android(contentId, cmd) {
             if (contentId != "") {
+                setTimeout(function () {
+                    window.location = "http://market.android.com/details?id=com.avea.firsat";
+                }, 50);
                 window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else if(cmd.toLowerCase().includes("bidunya_deep_link")) {
