seninzamanin directory is added...

--- a/seninzamanin/seninzamanin_ios.html
+++ b/seninzamanin/seninzamanin_ios.html
@@ -27,7 +27,7 @@
                 ios(contentId, cmd);
             }
             else {
-                window.location.assign("http://www.seninzamanin.com");
+                window.location.assign("https://bireysel.turktelekom.com.tr/ozel-programlar/senin-zamanin/sayfalar/default.aspx");
             }
         }
 
