--- a/bidunyafirsat/bidunyafirsat_ios.html
+++ b/bidunyafirsat/bidunyafirsat_ios.html
@@ -37,6 +37,7 @@
                 console.info(userAgent.toLowerCase());
             }
             else {
+                alert();
                 window.location.assign("https://bireysel.turktelekom.com.tr/ozel-avantajlar/sayfalar/ana-sayfa.aspx");
                 console.info("We are in desktop");
             }
