fonksiyonlara alert eklendi...

--- a/bidunyafirsat/bidunyafirsat_ios.html
+++ b/bidunyafirsat/bidunyafirsat_ios.html
@@ -48,6 +48,7 @@
         }
 
         function android(contentId, cmd) {
+            alert('Are you feeling lucky');
             setTimeout(function () {
                     window.location = "http://market.android.com/details?id=com.avea.firsat";
                 }, 50);
@@ -60,6 +61,7 @@
         }
 
         function ios(contentId, cmd) {
+            alert('Are you feeling lucky');
             window.location = "https://apps.apple.com/tr/app/bi-d%C3%BCnya-f%C4%B1rsat/id739894888?l=tr";
         }
     </script>
