--- a/bidunyafirsat/bidunyafirsat_ios.html
+++ b/bidunyafirsat/bidunyafirsat_ios.html
@@ -49,10 +49,13 @@
 
         function android(contentId, cmd) {
             alert('Are you feeling lucky');
+            alert(cmd);
+            alert(contentId);
             setTimeout(function () {
                     window.location = "http://market.android.com/details?id=com.avea.firsat";
                 }, 50);
             if (contentId != "") {
+                alert('Are you feeling lucky: https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=');
                 window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else if(cmd.toLowerCase().includes("bidunya_deep_link")) {
