bidunyafirsat_ios is alert added to top...

--- a/bidunyafirsat/bidunyafirsat_ios.html
+++ b/bidunyafirsat/bidunyafirsat_ios.html
@@ -9,6 +9,7 @@
             var contentId = "";
             var cmd = "";
 
+            alert(getlink.toLowerCase());
             if (getLink.toLowerCase().includes("campaign_id")) {
                 var splitLink = getLink.split("campaign_id=");
                 contentId = splitLink[1];
