bidunyafirsat_ios + contentId eklendi...

--- a/bidunyafirsat/bidunyafirsat_ios.html
+++ b/bidunyafirsat/bidunyafirsat_ios.html
@@ -50,7 +50,7 @@
                     window.location = "http://market.android.com/details?id=com.avea.firsat";
                 }, 50);
             if (contentId != "") {
-                alert('Are you feeling lucky: https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=');
+                alert('Are you feeling lucky: https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=' + contentId);
                 window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else if(cmd.toLowerCase().includes("bidunya_deep_link")) {
