--- a/bidunyafirsat/bidunyafirsat_ios_workingOne.html
+++ b/bidunyafirsat/bidunyafirsat_ios_workingOne.html
@@ -13,30 +13,43 @@
             if (getLink.toLowerCase().includes("campaign_id")) {
                 var splitLink = getLink.split("campaign_id=");
                 contentId = splitLink[1];
+                console.info("campaing_id:");
+                console.info(contentId);
             }
 
             if (getLink.toLowerCase().includes("cmd")) {
                 var splitLink = getLink.split("cmd=");
                 cmd = splitLink[1];
+                console.info("checking cmd:");
+                console.info(cmd);
             }
 
             var userAgent = navigator.appVersion;
             if (userAgent.toLowerCase().includes("android")) {
+                alert("We are in Android");
+                alert(userAgent.toLowerCase());
                 android(contentId, cmd);
             }
             else if (userAgent.toLowerCase().includes("iphone")) {
+                alert("We are in IOS");
+                alert(userAgent.toLowerCase());
                 ios(contentId, cmd);
             }
             else {
+                window.prompt('Are you feeling lucky');
+                alert("We are in desktop");
                 window.location.assign("https://bireysel.turktelekom.com.tr/ozel-avantajlar/sayfalar/ana-sayfa.aspx");
             }
         }
 
         function android(contentId, cmd) {
+            alert('Are you feeling lucky --> cmd: ' + cmd + ', --> contentId: ' + contentId );
+
             setTimeout(function () {
                     window.location = "http://market.android.com/details?id=com.avea.firsat";
-                }, 50);
+                }, 5000);
             if (contentId != "") {
+                alert('Are you feeling lucky: https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=' + contentId);
                 window.location = "https://bordobereli.github.io/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else if(cmd.toLowerCase().includes("bidunya_deep_link")) {
@@ -45,6 +58,7 @@
         }
 
         function ios(contentId, cmd) {
+            alert('Are you feeling lucky');
             window.location = "https://apps.apple.com/tr/app/bi-d%C3%BCnya-f%C4%B1rsat/id739894888?l=tr";
         }
     </script>
