--- a/seninzamanin.html
+++ b/seninzamanin.html
@@ -36,7 +36,7 @@
                     window.location = "http://market.android.com/details?id=tr.com.turktelekom.seninzamanin";
                 }, 5000);
             if (contentId != "") {
-                window.location = "https://bordobereli.github.io/cmd=seninzamanin_deep_link&content=" + contentId;
+                window.location = "https:/www.seninzamanin.com/sz/seninzamanin.html?content=" + contentId;
             }
             else if(cmd.toLowerCase().includes("seninzamanin_deep_link")) {
                 window.location = "https://bordobereli.github.io/cmd=seninzamanin_deep_link";
