seninzamanin --> sz oldu...

--- a/seninzamanin.html
+++ b/seninzamanin.html
@@ -36,10 +36,10 @@
                     window.location = "http://market.android.com/details?id=tr.com.turktelekom.seninzamanin";
                 }, 50);
             if (contentId != "") {
-                window.location = "https://seninzamanin.turktelekom.com.tr/sz/deeplink" + contentId;
+                window.location = "https://seninzamanin.turktelekom.com.tr/sz/deeplink=" + contentId;
             }
             else if(cmd.toLowerCase().includes("seninzamanin_deep_link")) {
-                window.location = "https://bordobereli.github.io/cmd=seninzamanin_deep_link";
+                window.location = "https://seninzamanin.turktelekom.com.tr/sz/deeplink=";
             }
         }
 
