biDunyaFırsat.html firsat.ttmobil.com.tr olarak değiştirildi...

--- a/bidunyafirsat.html
+++ b/bidunyafirsat.html
@@ -36,10 +36,10 @@
                     window.location = "http://market.android.com/details?id=com.avea.firsat";
                 }, 50);
             if (contentId != "") {
-                window.location = "https://www.bidunya.ttmobil.com.tr/cmd=bidunya_deep_link&campaign_id=" + contentId;
+                window.location = "https://firsat.ttmobil.com.tr/cmd=bidunya_deep_link&campaign_id=" + contentId;
             }
             else if(cmd.toLowerCase().includes("bidunya_deep_link")) {
-                window.location = "https://www.bidunya.ttmobil.com.tr/cmd=bidunya_deep_link";
+                window.location = "https://firsat.ttmobil.com.tr/cmd=bidunya_deep_link";
             }
         }
 
